Implémentation du hachage d'objets et du stockage de blobs
Ajouts:
- Création de la classe Blob pour représenter un fichier
- Implémentation de la fonction sha1 pour le hachage cryptographique
- Ajout de la commande hash-object avec option -w pour stocker les objets

Cette étape constitue la base pour le stockage d'objets,
permettant à notre système de versionner des fichiers à la manière de Git.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,11 @@ find_package(OpenSSL REQUIRED)
 
 include_directories(${OPENSSL_INCLUDE_DIR})
 
-add_executable(mygit src/main.cpp src/commands/init.cpp)
-
+add_executable(mygit 
+    src/main.cpp 
+    src/commands/init.cpp
+    src/commands/HashObject.cpp
+    src/objets/Blob.cpp
+    src/objets/Utilities.cpp
+)
 target_link_libraries(mygit ${OPENSSL_LIBRARIES})
