feat: implémentation des fonctionnalités d'index et de zone de préparation
Ajout d'une prise en charge complète pour le suivi des fichiers avec la commande `add` :
- Création de la classe Index
- Implémentation de la méthode addFile pour stocker les blobs et mettre à jour les entrées d'index
- Gestion des métadonnées des fichiers (mode, taille, horodatage)
- Prise en charge de la mise à jour des entrées d'index existantes lors de la modification des fichiers

Ce commit complète le deuxième composant majeur de l'architecture Git,
fournissant la zone de préparation entre l'espace de travail et le dépôt.

README.md mis à jour pour refléter l'avancement actuel du projet et ajouter la documentation pour la commande `add`.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,9 @@ add_executable(mygit
     src/main.cpp 
     src/commands/init.cpp
     src/commands/HashObject.cpp
+    src/commands/add.cpp
     src/objets/Blob.cpp
     src/objets/Utilities.cpp
+    src/objets/index.cpp   
 )
 target_link_libraries(mygit ${OPENSSL_LIBRARIES})
